tests/errors/variables/001.err
[1m[0;31merror: [0mredefinition of 'x'
  [1m[34m-->[0m src/tests/errors/variables/001.ura:6:7
  [1m[34m|[0m
[1m[34m6 |[0m     x int = 10
  [1m[34m|[0m       [1;31m^^^[0m
